--- a/estilos.scss
+++ b/estilos.scss
@@ -42,6 +42,7 @@ header {
     font-size: calc($size/4);
 }
 
+
 .logo {
     font-size: calc($size/2)-10;
 }
@@ -698,7 +699,7 @@ h2 {
 }
 
 .tipoc {
-    display: inline-block;
+    display: flex;
 }
 
 footer {
