--- a/estilos.scss
+++ b/estilos.scss
@@ -10,16 +10,16 @@
 
 /*fuente*/
 
-$font1: Reenie beanie;
+$font1: Quicksand;
 
 
 /*paleta de colores*/
 
-$color1: #504f4f;
-$color2: #b2b0b0;
+$color1: #1b1b32;
+$color2: #fffdfd;
 $color3: #eeccc8;
 $color4: #2b2929;
-$color5: #a5a1a1;
+$color5: #a5a1a106;
 $color6: #e426bb;
 
 
@@ -36,39 +36,92 @@ $size: 100px;
 
 /*barra de navegcion*/
 
-header {
-    background-color: #726f6f;
-    padding: 10px 10px;
-    font-size: calc($size/4);
+.navbar {
+    padding: 2rem;
+    background-color:#909095;
+    font-size: 20px;
+    font-family: $font1;
+    color: #ffffffb5;
 }
 
-
-.logo {
-    font-size: calc($size/2)-10;
+.navbar-collapse {
+    align-items: center;
+    justify-content: space-between;
 }
 
-.logo span {
-    color: #dd59c1;
-}
-
-a:hover {
-    color: #ebc2e2 !important;
+.nav-logo{
+    height: 90px;
+    width: 90px;
+    margin: 15px;
+    border-radius: 70%;
 }
 
 /*cuerpo*/
 
-main {
+.bi-bi{
+    font-size: 2.9rem;
+    color: #e257b8;
+    background-color: #0a0a23;
+    padding: 8px 19px;
+    border-radius: 50%;
+}
+
+.nav-logo-logo{
+    height: 220px;
+    width: 220px;
+    margin: 25px;
+    border-radius: 70%;
+}
+
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 2.0rem;
+    font-family: rubik dirt, cursive;
+    letter-spacing: 8px;
+    color: white;
+    padding: calc($size/5);
+}
+
+.oscuro{
+    color: #1b1b32;
+}
+
+
+.cuerpo {
+    background-color: #f5f6f7;
+    min-height: 450px;
+    text-align: center;
+}
+
+.cuerpo-principal {
+    padding: 3rem;
+}
+
+.cuerpo-principal h2 {
+    font-size: 1.5rem;
+    color: #615151;
+}
+
+
+/*main {
     height: auto;
-    background-color: $color1;
+    background-color: #f5f6f7d3;
     background-size: cover;
     background-position: center;
-}
+}*/
 
 
 .imagen {
     width: $var1;
     min-height: $ancho - 150;
-    background-color: $color1;
+    background-color:#1b1b32;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(8, 200px);
@@ -182,6 +235,288 @@ main {
 }
 
 
+.fondo {
+    background-color: $color2;
+    text-align: center;
+    padding: $size - 20;
+}
+
+.jumbotron {
+    background-image: url(multimedia/jumbonuevo.webp);
+    background-size: cover;
+    background-position: center;
+    border: solid $color1 calc($size/20);
+    height: 400px;
+    padding: calc($size/2)-10;
+}
+
+.btn-light{
+    text-decoration:wavy;
+}
+
+.jumbotron2 {
+    background-image: url(multimedia/jumbonuevo4.webp);
+    background-size: cover;
+    background-position: center;
+    border: solid $color3 calc($size/20);
+    height: $ancho - 320;
+    padding: calc($size/2)-10;
+}
+
+.jumbotron3 {
+    background-image: url(multimedia/jumbo4.webp);
+    background-size: cover;
+    background-position: center;
+    border: solid $color3 calc($size/20);
+    height: $ancho - 320;
+    padding: calc($size/2)-10;
+}
+
+.jumbotron4 {
+    background-image: url(multimedia/jumbonuevo5.jpg);
+    background-size: cover;
+    background-position: center;
+    border: solid $color3 calc($size/20);
+    height: $ancho - 320;
+    padding: calc($size/2)-10;
+}
+
+.jumbotron5 {
+    background-image: url(multimedia/jumbo11.jpg);
+    background-size: cover;
+    background-position: center;
+    border: solid $color3 calc($size/20);
+    height: $ancho - 320;
+    padding: calc($size/2)-10;
+}
+
+
+
+.jumbotron p {
+    font-size: xx-large;
+    font-weight: bolder;
+    color: $color4;
+    border: $color5 solid calc($size/20)-2;
+    padding: calc($size/5);
+}
+
+.jumbotron2 p {
+    font-size: xx-large;
+    font-weight: bolder;
+    color: $color4;
+    border: $color5 solid calc($size/20)-2;
+    padding: calc($size/5);
+}
+
+/*h1 {
+    color: $color6;
+    border: solid $color5;
+    padding: calc($size/5);
+}*/
+
+p {
+    font-family: $font1, cursive;
+    font-size: 20px;
+}
+
+
+/*.count {
+    width: calc($var2)-4;
+    background-color: #909095;
+    color: white;
+    border: calc($size/20) solid $color1;
+    padding: calc($size/5)+15;
+    margin: calc($size/5)+10;
+    text-align: center;
+}*/
+
+span {
+    font-size: 25px;
+    color: $color1;
+    font-family: Rubik Dirt;
+}
+
+/*.count a {
+    text-decoration: none;
+    color: #ffffff;
+    font-family: $font1, cursive;
+    font-size: calc($size/5);
+    padding: calc($size/5)+10;
+}*/
+
+.a h2 {
+    background-color: $color3;
+    text-decoration: none;
+    color: #ffffff;
+    font-family: $font1, cursive;
+    font-size: calc($size/5)+10;
+    padding: calc($size/5)+10;
+}
+
+.badges-contenedor button a:hover {
+    color: $color6;
+    text-decoration: none;
+}
+
+.badges-contenedor button a{
+    color: white;
+}
+
+.list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: $color2;
+    
+}
+
+/*.count a:hover {
+    color: $color6;
+}*/
+
+h2 {
+    /*background-color: $color6;*/
+    text-align: center;
+    font-family: $font1, cursive;
+    color: white;
+    letter-spacing: calc($size/20);
+    padding: calc($size/5)+20;
+    font-size: calc($size/5)+10;
+}
+
+
+
+.experiencia {
+    padding: 40px 40px 60px 40px;
+}
+
+.seccion-clara {
+    color: black;
+    background-color: white;
+}
+
+/*.experiencia .row div{
+    height: 250px;
+    background-color: purple;
+    border: 3px solid orange;
+}*/
+
+.experiencia-titulo {
+    font-size: 25px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.experiencia i {
+    font-size: 2.5rem;
+    color: #e257b8;
+    background-color: #0a0a23;
+    padding: 8px 19px;
+    border-radius: 50%;
+}
+
+.experiencia .columna {
+    padding: 20px;
+    border: calc($size/20) solid $color1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:space-between;
+    transition: all 0.2s ease-in;
+}
+.experiencia .columna1{
+    padding: 20px;
+    border: calc($size/20) solid $color1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:space-between;
+}
+
+
+.experiencia .columna:hover {
+    color: white;
+    background-color: #1b1b32;
+}
+
+.badges-contenedor {
+    font-size: 25px;
+    font-family: $font1;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.badge {
+    margin: 10px;
+}
+
+.tipoc {
+    display: flex;
+}
+
+
+
+/*footer*/
+
+.seccion-oscura {
+    color: white;
+    background-color: #1b1b32;
+}
+
+.seccion-gris {
+    color: white;
+    background-color: #2b2b2c9e;
+}
+
+.footer{
+    min-height: 450px;
+}
+
+.footer-logo{
+    height: 80px;
+    width: 80px;
+    margin: 10px;
+    border-radius: 70%;
+}
+
+.footer-texto{
+    font-size: 1.5rem;
+    padding: 20px;
+    margin-bottom: 30px;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.iconos-redes-sociales a {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2px;
+    margin: 10px;
+    border: 2px solid white;
+    border-radius: 50px;
+    transition: all 0.2s ease-in;
+}
+
+.iconos-redes-sociales i {
+    color: white;
+    font-size: 1.5rem;
+    transition: all 0.2s ease-in;
+}
+
+.iconos-redes-sociales a:hover{
+    background-color: white;
+    border: 2px solid $color6;
+}
+
+.iconos-redes-sociales a:hover i{
+    color: black;
+}
+
+
+/*Responsivos*/
 
 @media only screen and (min-width: 480px) {
     .imagen {
@@ -469,260 +804,4 @@ main {
         grid-row: 3/4;
         background-image: url(multimedia/paletas\ 2.jpg);
     }
-}
-
-.fondo {
-    background-color: $color2;
-    text-align: center;
-    padding: $size - 20;
-}
-
-.jumbotron {
-    background-image: url(multimedia/jumbonuevo.webp);
-    background-size: cover;
-    background-position: center;
-    border: solid $color3 calc($size/20);
-    height: calc($alto*4);
-    padding: calc($size/2)-10;
-}
-
-.jumbotron2 {
-    background-image: url(multimedia/jumbonuevo4.webp);
-    background-size: cover;
-    background-position: center;
-    border: solid $color3 calc($size/20);
-    height: $ancho - 320;
-    padding: calc($size/2)-10;
-}
-
-.jumbotron3 {
-    background-image: url(multimedia/jumbo4.webp);
-    background-size: cover;
-    background-position: center;
-    border: solid $color3 calc($size/20);
-    height: $ancho - 320;
-    padding: calc($size/2)-10;
-}
-
-.jumbotron4 {
-    background-image: url(multimedia/jumbonuevo5.jpg);
-    background-size: cover;
-    background-position: center;
-    border: solid $color3 calc($size/20);
-    height: $ancho - 320;
-    padding: calc($size/2)-10;
-}
-
-.jumbotron5 {
-    background-image: url(multimedia/jumbo11.jpg);
-    background-size: cover;
-    background-position: center;
-    border: solid $color3 calc($size/20);
-    height: $ancho - 320;
-    padding: calc($size/2)-10;
-}
-
-
-
-.jumbotron p {
-    font-size: xx-large;
-    font-weight: bolder;
-    color: $color4;
-    border: $color5 solid calc($size/20)-2;
-    padding: calc($size/5);
-}
-
-.jumbotron2 p {
-    font-size: xx-large;
-    font-weight: bolder;
-    color: $color4;
-    border: $color5 solid calc($size/20)-2;
-    padding: calc($size/5);
-}
-
-h1 {
-    color: $color6;
-    border: solid $color5;
-    padding: calc($size/5);
-}
-
-p {
-    font-family: $font1, cursive;
-    font-size: calc($size/5)+10;
-}
-
-
-.count {
-    width: calc($var2)-7;
-    background-color: #d8d6d7;
-    color: white;
-    border: calc($size/20) solid $color1;
-    padding: calc($size/5)+5;
-    margin: calc($size/5)+10;
-    text-align: center;
-}
-
-span {
-    font-size: calc($size/2)-10;
-    color: $color1;
-}
-
-.count a {
-    background-color: $color3;
-    text-decoration: none;
-    color: #ffffff;
-    font-family: $font1, cursive;
-    font-size: calc($size/5)+10;
-    padding: calc($size/5)+10;
-    text-transform: uppercase;
-}
-
-.a h2 {
-    background-color: $color3;
-    text-decoration: none;
-    color: #ffffff;
-    font-family: $font1, cursive;
-    font-size: calc($size/5)+10;
-    padding: calc($size/5)+10;
-    text-transform: uppercase;
-}
-
-.a h2:hover {
-    color: $color4;
-}
-
-.list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    background-color: $color2;
-}
-
-.count a:hover {
-    color: #404040 !important;
-}
-
-h2 {
-    background-color: $color3;
-    text-align: center;
-    font-family: $font1, cursive;
-    letter-spacing: calc($size/20);
-    padding: calc($size/5);
-    font-size: calc($size/5)+10;
-}
-
-
-.sec {
-    background-color: $color1;
-    width: $var1;
-    height: auto;
-}
-
-.sec1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: space-evenly;
-}
-
-
-
-.caja {
-    height: 350px;
-    width: 350%;
-    background-color: $color3;
-    border: 2px solid #fff;
-    color: #fff;
-    text-align: center;
-    line-height: calc($size)+20;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: calc($size/5);
-    flex-basis: calc($size*2)+80;
-}
-
-.caja1 {
-    background-image: url(multimedia/basico1.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.caja2 {
-    background-image: url(multimedia/basico2.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.caja3 {
-    background-image: url(multimedia/basico3.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.caja4 {
-    background-image: url(multimedia/coleccion\ nigth1.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.caja5 {
-    background-image: url(multimedia/coleccion\ night2.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.caja6 {
-    background-image: url(multimedia/coleccion\ nigth3.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.caja11 {
-    background-image: url(multimedia/basico8.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.caja22 {
-    background-image: url(multimedia/noche8.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.caja33 {
-    background-image: url(multimedia/basico3.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.tipoc {
-    display: flex;
-}
-
-footer {
-    height: auto;
-    width: $var1;
-    background-color: $color3;
-    color: #000000;
-    text-align: center;
-    padding: calc($size/5);
-    font-size: calc($size/5)+10;
-    font-family: $font1, cursive;
-    justify-content: center;
-}
-
-footer p {
-    margin-bottom: calc($size/5);
-}
-
-footer i {
-    color: #000000;
-    font-size: calc($size/2);
-}
-
-footer i:hover {
-    color: #fff;
 }
